--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Company Name</title>
+    <title>Lion Chem Pharm</title>
     <!-- You can link your CSS file here -->
 </head>
 <body>
@@ -16,6 +16,7 @@
     <main>
        
         <p>We are in the process of adding more details </p>
+        <p> Contacts details coming soon</p>
         
     </main>
     <footer>
