--- a/index.html
+++ b/index.html
@@ -24,3 +24,4 @@
     </footer>
 </body>
 </html>
+<img src="images/your-logo-filename.png" alt="Lion Chem Pharm Pte Ltd Logo" style="max-width: 200px; height: auto;">
