--- a/index.html
+++ b/index.html
@@ -25,3 +25,33 @@
 </body>
 </html>
 <img src="images/your-logo-filename.png" alt="Lion Chem Pharm Pte Ltd Logo" style="max-width: 200px; height: auto;">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Website</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <div class="logo">
+      <img src="logo.png" alt="Company Logo">
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <!-- Main content of your website goes here -->
+  </main>
+  <footer>
+    <!-- Footer content goes here -->
+  </footer>
+</body>
+</html>
