--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<div class="logo">
+  <img src="logo.png" alt="Company Logo" width="30mm" height="30mm">
+</div>
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
