--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </footer>
 </body>
 </html>
-<img src="images/your-logo-filename.png" alt="Lion Chem Pharm Pte Ltd Logo" style="max-width: 200px; height: auto;">
+<img src="images/logo.png" alt="Lion Chem Pharm Pte Ltd Logo" style="max-width: 200px; height: auto;">
 <!DOCTYPE html>
 <html lang="en">
 <head>
