--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LionChemPharm - Raw Materials Supplier</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to LionChemPharm</h1>
+        <p>We are a company based out of Singapore which facilitates the buying and selling of raw materials to pharmaceutical companies.</p>
+    </header>
+
+    <footer>
+        <p>Contact Us:</p>
+        <address>
+            10 ANSON ROAD #22-02<br>
+            INTERNATIONAL PLAZA<br>
+            Singapore 079903<br>
+            Email: <a href="mailto:business@lionchempharm.com">business@lionchempharm.com</a>
+        </address>
+    </footer>
+</body>
+</html>
 
