--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lion Chem Pharm Pte Ltd - Singapore</title>
+    <title>LionChemPharm - Singapore</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to LionChemPharm</h1>
+        <h1>Welcome to Lion Chem Pharm Pte Ltd</h1>
         <p>We are a company based out of Singapore which facilitates the buying and selling of raw materials to pharmaceutical companies.</p>
     </header>
 
