--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,7 +9,7 @@
 <body>
     <header>
         <h1>Welcome to Lion Chem Pharm Pte Ltd</h1>
-        <p>We are a company based out of Singapore which facilitates the buying and selling of raw materials to pharmaceutical companies.</p>
+        <p>We are a company based in Singapore which facilitates the buying and selling of raw materials to pharmaceutical companies.</p>
     </header>
 
     <footer>
