--- a/index.html
+++ b/index.html
@@ -3,23 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LionChemPharm - Singapore</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Lion Chem Pharm Pte Ltd - Raw Materials for Pharmaceutical Companies</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            color: #333;
+        }
+        header {
+            background-color: #005a87;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+        }
+        main {
+            padding: 20px;
+        }
+        .cta-button {
+            display: inline-block;
+            background-color: #005a87;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 20px;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+        footer a {
+            color: #fff;
+            text-decoration: none;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to Lion Chem Pharm Pte Ltd</h1>
-        <p>We are a company based in Singapore which facilitates the buying and selling of raw materials to pharmaceutical companies.</p>
+        <h1>Lion Chem Pharm Pte Ltd</h1>
+        <p>Your Trusted Partner in Pharmaceutical Raw Materials</p>
     </header>
-
+    <main>
+        <section id="home">
+            <h2>Welcome to Lion Chem Pharm Pte Ltd</h2>
+            <p>We are a Singapore-based company specializing in facilitating the buying and selling of raw materials to pharmaceutical companies worldwide.</p>
+            <a href="mailto:business@lionchempharm.com" class="cta-button">Get in Touch</a>
+        </section>
+    </main>
     <footer>
-        <p>Contact Us:</p>
-        <address>
-            10 ANSON ROAD #22-02<br>
-            INTERNATIONAL PLAZA<br>
-            Singapore 079903<br>
-            Email: <a href="mailto:business@lionchempharm.com">business@lionchempharm.com</a>
-        </address>
+        <p>&copy; 2024 Lion Chem Pharm Pte Ltd. All rights reserved.</p>
+        <p>10 ANSON ROAD #22-02 INTERNATIONAL PLAZA Singapore 079903</p>
+        <p>Email: <a href="mailto:business@lionchempharm.com">business@lionchempharm.com</a></p>
     </footer>
 </body>
 </html>
