--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <footer>
         <p>&copy; 2024 Lion Chem Pharm Pte Ltd. All rights reserved.</p>
         <p>10 ANSON ROAD #22-02 INTERNATIONAL PLAZA Singapore 079903</p>
-        <p>Email: <a href="mailto:business@lionchempharm.com">business@lionchempharm.com</a></p>
+        <p>Email: <a href="mailto:business@lionchempharm.com">lion Singapore</a></p>
     </footer>
 </body>
 </html>
