--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
             text-decoration: none;
             border-radius: 5px;
             margin-top: 20px;
+            margin-bottom: 20px;
+        }
+        .address {
+            margin-top: 20px;
+            font-style: italic;
         }
         footer {
             background-color: #333;
@@ -58,13 +63,15 @@
             <h2>Welcome to Lion Chem Pharm Pte Ltd</h2>
             <p>We are a Singapore-based company specializing in facilitating the buying and selling of raw materials to pharmaceutical companies worldwide.</p>
             <a href="mailto:business@lionchempharm.com" class="cta-button">Get in Touch</a>
+            <div class="address">
+                <p>10 ANSON ROAD #22-02 INTERNATIONAL PLAZA<br>
+                Singapore 079903<br>
+                Email: <a href="mailto:business@lionchempharm.com">business@lionchempharm.com</a></p>
+            </div>
         </section>
     </main>
     <footer>
         <p>&copy; 2024 Lion Chem Pharm Pte Ltd. All rights reserved.</p>
-        <p>10 ANSON ROAD #22-02 INTERNATIONAL PLAZA Singapore 079903</p>
-        <p>Email: <a href="mailto:business@lionchempharm.com">business@lionchempharm.com</a></p>
     </footer>
 </body>
 </html>
-
