--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h2>Welcome to Lion Chem Pharm Pte Ltd</h2>
             <p>We are a Singapore-based company specializing in facilitating the buying and selling of raw materials to pharmaceutical companies worldwide.</p>
             <a href="mailto:business@lionchempharm.com" class="cta-button">Get in Touch</a>
-            <div class="address">
+        ##    <div class="address">
                 <p>10 ANSON ROAD #22-02 INTERNATIONAL PLAZA<br>
                 Singapore 079903<br>
                 Email: <a href="mailto:business@lionchempharm.com">business@lionchempharm.com</a></p>
