--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="address">
                 <p>10 ANSON ROAD #22-02 INTERNATIONAL PLAZA Singapore 079903<br>
                 Email: <a href="mailto:business@lionchempharm.com">business@lionchempharm.com</a></p>
-              
+                <p>Phone number +65 81615936<br>
             </div>
         </section>
     </main>
