--- a/index.html
+++ b/index.html
@@ -3,75 +3,205 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lion Chem Pharm Pte Ltd - Raw Materials for Pharmaceutical Companies</title>
+    <title>Lion Chem Pharm Pte Ltd - Pharmaceutical Raw Materials</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            color: #333;
+        .gradient-bg {
+            background: linear-gradient(135deg, #f3f4f6 0%, #ffffff 100%);
         }
-        header {
-            background-color: #005a87;
-            color: white;
-            text-align: center;
-            padding: 1rem;
-        }
-        main {
-            padding: 20px;
-        }
-        .cta-button {
-            display: inline-block;
-            background-color: #005a87;
-            color: white;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
-        .address {
-            margin-top: 20px;
-            font-style: italic;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 1rem;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-        footer a {
-            color: #fff;
-            text-decoration: none;
-        }
-        footer a:hover {
-            text-decoration: underline;
+        html {
+            scroll-behavior: smooth;
         }
     </style>
 </head>
-<body>
-    <header>
-        <h1>Lion Chem Pharm Pte Ltd</h1>
-        <p>Your Trusted Partner in Pharmaceutical Raw Materials</p>
-    </header>
-    <main>
-        <section id="home">
-            <h2>Welcome to Lion Chem Pharm Pte Ltd</h2>
-            <p>We are a Singapore-based company specializing in facilitating the buying and selling of raw materials to pharmaceutical companies worldwide.</p>
-            <a href="mailto:business@lionchempharm.com" class="cta-button">Get in Touch</a>
-            <div class="address">
-                <p>10 ANSON ROAD #22-02 INTERNATIONAL PLAZA Singapore 079903<br>
-                Email: <a href="mailto:business@lionchempharm.com">business@lionchempharm.com</a></p>
-                <p>Phone number +65 81615936<br>
+<body class="font-sans">
+    <!-- Navigation -->
+    <nav class="bg-white shadow-lg fixed w-full z-10">
+        <div class="max-w-7xl mx-auto px-4">
+            <div class="flex justify-between h-16">
+                <div class="flex items-center">
+                    <span class="text-xl font-bold text-blue-900">Lion Chem Singapore</span>
+                </div>
+                <div class="flex items-center space-x-6">
+                    <a href="#about" class="text-gray-700 hover:text-blue-900">About</a>
+                    <a href="#quality" class="text-gray-700 hover:text-blue-900">Quality</a>
+                    <a href="#supply-chain" class="text-gray-700 hover:text-blue-900">Supply Chain</a>
+                    <a href="#contact" class="text-gray-700 hover:text-blue-900">Contact</a>
+                </div>
             </div>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Lion Chem Pharm Pte Ltd. All rights reserved.</p>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <header class="pt-24 pb-16 gradient-bg">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+            <h1 class="text-4xl font-bold text-blue-900 mb-4">
+                Your Trusted Partner in Life Sciences
+            </h1>
+            <p class="text-xl text-gray-600 mb-8">
+                Delivering excellence in pharmaceutical solutions from the heart of Singapore
+            </p>
+            <a href="#contact" class="bg-blue-900 text-white px-8 py-3 rounded-lg hover:bg-blue-800 transition duration-300">
+                Connect With Us
+            </a>
+        </div>
+    </header>
+
+    <!-- About Section -->
+    <section id="about" class="py-16 bg-white">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <h2 class="text-3xl font-bold text-center text-blue-900 mb-12">About Us</h2>
+            <div class="flex flex-col md:flex-row items-center justify-between gap-12">
+                <div class="md:w-1/2">
+                    <p class="text-lg text-gray-600 leading-relaxed">
+                        Lion Chem Singapore is an integrated pharmaceutical company located in the heart of World's Business Hubs in Singapore. Our focus is to provide the solutions for our customers and manufacturers by offering a wide portfolio of products in the field of Life Sciences.
+                    </p>
+                </div>
+                <div class="md:w-1/2">
+                    <div class="grid grid-cols-2 gap-4">
+                        <div class="p-6 bg-gray-50 rounded-lg text-center">
+                            <h3 class="font-bold text-blue-900 mb-2">Global Reach</h3>
+                            <p class="text-gray-600">Strategic location in Singapore's business hub</p>
+                        </div>
+                        <div class="p-6 bg-gray-50 rounded-lg text-center">
+                            <h3 class="font-bold text-blue-900 mb-2">Integrated Solutions</h3>
+                            <p class="text-gray-600">Comprehensive pharmaceutical services</p>
+                        </div>
+                        <div class="p-6 bg-gray-50 rounded-lg text-center">
+                            <h3 class="font-bold text-blue-900 mb-2">Wide Portfolio</h3>
+                            <p class="text-gray-600">Extensive range of life science products</p>
+                        </div>
+                        <div class="p-6 bg-gray-50 rounded-lg text-center">
+                            <h3 class="font-bold text-blue-900 mb-2">Customer Focus</h3>
+                            <p class="text-gray-600">Tailored solutions for your needs</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Quality Section -->
+    <section id="quality" class="py-16 gradient-bg">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <h2 class="text-3xl font-bold text-center text-blue-900 mb-12">Quality Commitment</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="bg-white p-8 rounded-lg shadow-lg">
+                    <h3 class="text-xl font-bold text-blue-900 mb-4">Quality Assurance</h3>
+                    <p class="text-gray-600 mb-4">
+                        Lion Chem Singapore believes in long term association with its business partners. We enter into Quality Agreements with our partners and ensure that the requirements are fulfilled at all times.
+                    </p>
+                    <p class="text-gray-600">
+                        Our selection procedure of reliable suppliers is conducted with utmost care to ensure consistent supplies of quality products.
+                    </p>
+                </div>
+                <div class="bg-white p-8 rounded-lg shadow-lg">
+                    <h3 class="text-xl font-bold text-blue-900 mb-4">Quality Policy</h3>
+                    <p class="text-gray-600 mb-4">
+                        We are committed to offering products and services that consistently exceed customer expectations. We ensure compliance with all applicable regulatory requirements, including:
+                    </p>
+                    <ul class="list-disc list-inside text-gray-600 space-y-2">
+                        <li>Current Good Manufacturing Practice (cGMP)</li>
+                        <li>ICH Q7 Guidelines</li>
+                        <li>21CFR 210, 211 Standards</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Supply Chain Section -->
+    <section id="supply-chain" class="py-16 bg-white">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <h2 class="text-3xl font-bold text-center text-blue-900 mb-12">Supply Chain Management</h2>
+            <div class="bg-gray-50 p-8 rounded-lg shadow-lg">
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                    <div class="text-center">
+                        <div class="w-16 h-16 mx-auto mb-4 flex items-center justify-center bg-blue-100 rounded-full">
+                            <svg class="w-8 h-8 text-blue-900" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 7l-8-4-8 4m16 0l-8 4m8-4v10l-8 4m0-10L4 7m8 4v10M4 7v10l8 4"/>
+                            </svg>
+                        </div>
+                        <h3 class="text-lg font-bold text-blue-900 mb-2">Standard Packaging</h3>
+                        <p class="text-gray-600">Export-grade packaging ensuring product integrity</p>
+                    </div>
+                    <div class="text-center">
+                        <div class="w-16 h-16 mx-auto mb-4 flex items-center justify-center bg-blue-100 rounded-full">
+                            <svg class="w-8 h-8 text-blue-900" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2"/>
+                            </svg>
+                        </div>
+                        <h3 class="text-lg font-bold text-blue-900 mb-2">Experienced Partners</h3>
+                        <p class="text-gray-600">Collaboration with seasoned cargo partners</p>
+                    </div>
+                    <div class="text-center">
+                        <div class="w-16 h-16 mx-auto mb-4 flex items-center justify-center bg-blue-100 rounded-full">
+                            <svg class="w-8 h-8 text-blue-900" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                            </svg>
+                        </div>
+                        <h3 class="text-lg font-bold text-blue-900 mb-2">Timely Delivery</h3>
+                        <p class="text-gray-600">Reliable and punctual logistics service</p>
+                    </div>
+                </div>
+                <p class="text-gray-600 text-center mt-8">
+                    Lion Chem Singapore ensures proper handling and timely delivery through partnerships with experienced pharmaceutical cargo handlers.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="py-16 gradient-bg">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <h2 class="text-3xl font-bold text-center text-blue-900 mb-12">Contact Us</h2>
+            <div class="bg-white p-8 rounded-lg shadow-lg">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
+                    <div>
+                        <h3 class="text-xl font-bold text-blue-900 mb-4">Get in Touch</h3>
+                        <div class="space-y-4">
+                            <p class="flex items-center text-gray-600">
+                                <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"/>
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"/>
+                                </svg>
+                                10 Anson Road #22-02<br/>International Plaza<br/>Singapore 079903
+                            </p>
+                            <p class="flex items-center text-gray-600">
+                                <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
+                                </svg>
+                                business@lionchempharm.com
+                            </p>
+                            <p class="flex items-center text-gray-600">
+                                <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
+                                </svg>
+                                +65 8161 5936
+                            </p>
+                        </div>
+                    </div>
+                    <div>
+                        <h3 class="text-xl font-bold text-blue-900 mb-4">Business Hours</h3>
+                        <div class="space-y-2 text-gray-600">
+                            <p>Monday - Friday: 9:00 AM - 6:00 PM (SGT)</p>
+                            <p>Saturday: By appointment</p>
+                            <p>Sunday: Closed</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-blue-900 text-white py-8">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="text-center">
+                <p class="mb-2">Lion Chem Singapore</p>
+                <p class="text-sm text-gray-300">© 2024 All rights reserved</p>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
