--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="flex flex-col md:flex-row items-center justify-between gap-12">
                 <div class="md:w-1/2">
                     <p class="text-lg text-gray-600 leading-relaxed">
-                        Lion Chem Singapore is an integrated pharmaceutical company located in the heart of World's Business Hubs in Singapore. Our focus is to provide the solutions for our customers and manufacturers by offering a wide portfolio of products in the field of Life Sciences.
+                        Lion Chem Pharm Pte Ltd Singapore is an integrated pharmaceutical company located in the heart of World's Business Hubs in Singapore. Our focus is to provide the solutions for our customers and manufacturers by offering a wide portfolio of products in the field of Life Sciences.
                     </p>
                 </div>
                 <div class="md:w-1/2">
@@ -89,7 +89,7 @@
                 <div class="bg-white p-8 rounded-lg shadow-lg">
                     <h3 class="text-xl font-bold text-blue-900 mb-4">Quality Assurance</h3>
                     <p class="text-gray-600 mb-4">
-                        Lion Chem Singapore believes in long term association with its business partners. We enter into Quality Agreements with our partners and ensure that the requirements are fulfilled at all times.
+                        Lion Chem Pharm Pte Ltd Singapore believes in long term association with its business partners. We enter into Quality Agreements with our partners and ensure that the requirements are fulfilled at all times.
                     </p>
                     <p class="text-gray-600">
                         Our selection procedure of reliable suppliers is conducted with utmost care to ensure consistent supplies of quality products.
@@ -145,7 +145,7 @@
                     </div>
                 </div>
                 <p class="text-gray-600 text-center mt-8">
-                    Lion Chem Singapore ensures proper handling and timely delivery through partnerships with experienced pharmaceutical cargo handlers.
+                    Lion Chem Pharm Singapore ensures proper handling and timely delivery through partnerships with experienced pharmaceutical cargo handlers.
                 </p>
             </div>
         </div>
