--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="max-w-7xl mx-auto px-4">
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
-                    <span class="text-xl font-bold text-blue-900">Lion Chem Pharm Pte Ltd Singapore</span>
+                    <span class="text-xl font-bold text-blue-900">Lion Chem Singapore</span>
                 </div>
                 <div class="flex items-center space-x-6">
                     <a href="#about" class="text-gray-700 hover:text-blue-900">About</a>
@@ -198,7 +198,7 @@
     <footer class="bg-blue-900 text-white py-8">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center">
-                <p class="mb-2">Lion Chem Singapore</p>
+                <p class="mb-2">Lion Chem Pharm Pte Ltd Singapore</p>
                 <p class="text-sm text-gray-300">© 2024 All rights reserved</p>
             </div>
         </div>
